EXTRA_DIST =	NOTES				\
		base64.h			\
		bsd-vis.h			\
		chacha_private.h		\
		defines.h			\
		err_h/err.h			\
		imsg.h				\
		includes.h			\
		libasr/asr.h			\
		libasr/asr_compat.h		\
		libasr/asr_private.h		\
		libasr/thread_private.h		\
		libtls/tls.h			\
		libtls/tls_internal.h		\
		openbsd-compat.h		\
		openssl/posix_time.h		\
		paths_h/paths.h			\
		sys/queue.h			\
		sys/tree.h			\
		waitpid.h
